// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<ForwardRef(Link)
  to={
    {
      "pathname": "/component_measures",
      "search": "?id=project123&metric=other&view=list",
    }
  }
>
  label
</ForwardRef(Link)>
`;

exports[`should render issuesLink correctly 1`] = `
<ForwardRef(Link)
  to={
    {
      "hash": "",
      "pathname": "/project/issues",
      "search": "?resolved=false&id=project123",
    }
  }
>
  label
</ForwardRef(Link)>
`;
